<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">

    <!--(diaglog_tv_beizhu)添加备注-->
    <TextView
        android:id="@+id/tv_dialog_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_notes"
        android:textSize="16sp"
        android:textColor="@color/black"/>
    
    <EditText
        android:id="@+id/et_dialog_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_note_hint"
        android:layout_below="@id/tv_dialog_note"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="14sp"
        android:background="@color/white">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/et_dialog_note"
        android:padding="10dp">
        <Button
            android:id="@+id/btn_dialog_note_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_note_cancel"
            android:background="@drawable/dialog_button_background"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"/>
        <!--btn_dialog_note_ensure-->
        <Button
            android:id="@+id/btn_dialog_note_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_note_confirm"
            android:background="@drawable/main_recordbtn_background"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>



</RelativeLayout>