<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyHeight="50dp"
    android:keyWidth="25%p"
    android:horizontalGap="1px"
    android:verticalGap="1px"
    android:background="#FFFFFF"> <!-- 设置白色背景 -->
    >

    <Row>
        <Key android:codes="49" android:keyLabel="1" android:keyBackground="@drawable/keyboard_background_selector"/>
        <Key android:codes="50" android:keyLabel="2" android:keyBackground="@drawable/keyboard_background_selector"/>
        <Key android:codes="51" android:keyLabel="3" android:keyBackground="@drawable/keyboard_background_selector"/>
        <Key android:codes="-5" android:keyLabel="@string/del" android:keyBackground="@drawable/keyboard_background_selector"/>
    </Row>
    <Row>
        <Key android:codes="52" android:keyLabel="4" android:keyBackground="@drawable/keyboard_background_selector"/>
        <Key android:codes="53" android:keyLabel="5" android:keyBackground="@drawable/keyboard_background_selector"/>
        <Key android:codes="54" android:keyLabel="6" android:keyBackground="@drawable/keyboard_background_selector"/>
        <Key android:codes="-4" android:keyHeight="150dp" android:keyLabel="@string/confirm" android:keyBackground="@drawable/keyboard_background_selector"/>
    </Row>
    <Row>
        <Key android:codes="55" android:keyLabel="7" android:keyBackground="@drawable/keyboard_background_selector"/>
        <Key android:codes="56" android:keyLabel="8" android:keyBackground="@drawable/keyboard_background_selector"/>
        <Key android:codes="57" android:keyLabel="9" android:keyBackground="@drawable/keyboard_background_selector"/>
    </Row>
    <Row>
        <Key android:codes="-3" android:keyLabel="@string/clear" android:keyBackground="@drawable/keyboard_background_selector"/>
        <Key android:codes="48" android:keyLabel="0" android:keyBackground="@drawable/keyboard_background_selector"/>
        <Key android:codes="46" android:keyLabel="." android:keyBackground="@drawable/keyboard_background_selector"/>
    </Row>

</Keyboard>
