<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f3f3f3"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="1dp">

        <TextView
            android:id="@+id/tv_item_main_layout_top_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_expenses"/>
        <TextView
            android:id="@+id/tv_item_main_layout_top_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="£ 0"
            android:layout_below="@id/tv_item_main_layout_top_tv1"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/tv_item_main_layout_top_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/ih_show"
            android:layout_alignTop="@id/tv_item_main_layout_top_out"/>

        <TextView
            android:id="@+id/tv_item_main_layout_top_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_income"
            android:layout_below="@id/tv_item_main_layout_top_out"

            />

        <TextView
            android:id="@+id/tv_item_main_layout_top_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="£ 0"
            android:layout_below="@id/tv_item_main_layout_top_out"
            android:layout_toEndOf="@id/tv_item_main_layout_top_tv2"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/tv_item_main_layout_top_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="£ 0"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/tv_item_main_layout_top_tv2"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/tv_item_main_layout_top_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining_budget"
            android:layout_toStartOf="@id/tv_item_main_layout_top_budget"
            android:layout_alignBottom="@id/tv_item_main_layout_top_tv2"
            />
        <TextView
            android:id="@+id/tv_item_main_layout_top_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ih_biaoge"
            android:layout_below="@id/tv_item_main_layout_top_tv2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/View_table"
            android:textColor="@color/blue_00BCD4"
            android:drawablePadding="10dp"
            />

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_item_main_layout_top_todayMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Today's expenses:£ 0 income:£ 0"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>