<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_main_card"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_item_main_layout_top_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/remaining_budget" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/tv_item_main_layout_top_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@mipmap/ih_show" />


            <TextView
                android:id="@+id/tv_item_main_layout_top_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="£ 0"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/black" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="5dp">


            <TextView
                android:id="@+id/tv_item_main_layout_top_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/monthly_expenses" />

            <TextView
                android:id="@+id/tv_item_main_layout_top_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="£ 0"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_marginStart="80dp"
                android:id="@+id/tv_item_main_layout_top_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/monthly_income" />

            <TextView
                android:id="@+id/tv_item_main_layout_top_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="£ 0"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>




        <TextView
            android:id="@+id/tv_item_main_layout_top_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_main_layout_top_tv2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@mipmap/ih_biaoge"
            android:drawablePadding="10dp"
            android:text="@string/View_table"
            android:textColor="@color/blue_00BCD4"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_item_main_layout_top_todayMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="Today's expenses:£ 0 income:£ 0"
        android:textStyle="bold" />

</LinearLayout>