<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back_monthly_chart_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/it_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/chart_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_calendar_monthly_chart_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/ic_calendar" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_calendar" /> <!-- 替换为您的图片 -->
            <TextView
                android:id="@+id/tv_time_monthly_chart_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2020 11 "
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_expenses" /> <!-- 图片垂直居中 -->

            <TextView
                android:id="@+id/tv_expenses_monthly_chart_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" an expenditure,£11.0 "
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" /> <!-- TextView 垂直居中 -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_income" /> <!-- 图片垂直居中 -->

            <TextView
                android:id="@+id/tv_income_monthly_chart_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A total of 2 incomes,£11.0 "
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_month_chart_expenses"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/selector_button_1"
                android:text="@string/expenses"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_month_chart_income"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/dialog_button_background"
                android:text="@string/income"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_month_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


</LinearLayout>